# tensorstore-registry

./: .gitignore  MODULE.bazel  README.md  find_bazel_deps.py  run_tests.sh  test_bazelrc
modules/abseil-cpp/: metadata.json
modules/abseil-cpp/20250429-5f3435aba/: MODULE.bazel  source.json
modules/abseil-cpp/20250811-274c81389/: MODULE.bazel  source.json
modules/apple_support/: metadata.json
modules/apple_support/1.17.1/: MODULE.bazel  source.json
modules/aws_c_auth/: metadata.json
modules/aws_c_auth/0.9.0/: MODULE.bazel  source.json
modules/aws_c_cal/: metadata.json
modules/aws_c_cal/0.9.0/: MODULE.bazel  source.json
modules/aws_c_cal/0.9.2/: MODULE.bazel  source.json
modules/aws_c_common/: metadata.json
modules/aws_c_common/0.12.2/: MODULE.bazel  source.json
modules/aws_c_common/0.12.4/: MODULE.bazel  source.json
modules/aws_c_compression/: metadata.json
modules/aws_c_compression/0.3.1/: MODULE.bazel  source.json
modules/aws_c_event_stream/: metadata.json
modules/aws_c_event_stream/0.5.4/: MODULE.bazel  source.json
modules/aws_c_event_stream/0.5.6/: MODULE.bazel  source.json
modules/aws_c_http/: metadata.json
modules/aws_c_http/0.10.4/: MODULE.bazel  source.json
modules/aws_c_http/0.9.7/: MODULE.bazel  source.json
modules/aws_c_io/: metadata.json
modules/aws_c_io/0.18.1/: MODULE.bazel  source.json
modules/aws_c_io/0.21.4/: MODULE.bazel  source.json
modules/aws_c_mqtt/: metadata.json
modules/aws_c_mqtt/0.12.3/: MODULE.bazel  source.json
modules/aws_c_mqtt/0.13.3/: MODULE.bazel  source.json
modules/aws_c_s3/: metadata.json
modules/aws_c_s3/0.7.15/: MODULE.bazel  source.json
modules/aws_c_s3/0.8.7/: MODULE.bazel  source.json
modules/aws_c_sdkutils/: metadata.json
modules/aws_c_sdkutils/0.2.3/: MODULE.bazel  source.json
modules/aws_c_sdkutils/0.2.4/: MODULE.bazel  source.json
modules/aws_checksums/: metadata.json
modules/aws_checksums/0.2.7/: MODULE.bazel  source.json
modules/aws_s2n_tls/: metadata.json
modules/bazel_features/: metadata.json
modules/bazel_skylib/: metadata.json
modules/blake3/: metadata.json
modules/boringssl/: metadata.json
modules/brotli/: metadata.json
modules/bzip2/: metadata.json
modules/c-ares/: metadata.json
modules/c-blosc/: metadata.json
modules/cel-spec/: metadata.json
modules/curl/: metadata.json
modules/envoy_api/: metadata.json
modules/google_benchmark/: metadata.json
modules/googleapis/: metadata.json
modules/googletest/: metadata.json
modules/grpc/: metadata.json
modules/half/: metadata.json
modules/libjpeg_turbo/: metadata.json
modules/libpng/: metadata.json
modules/libtiff/: metadata.json
modules/libwebp/: metadata.json
modules/libyuv/: metadata.json
modules/lz4/: metadata.json
modules/nasm/: metadata.json
modules/nghttp2/: metadata.json
modules/nlohmann_json/: metadata.json
modules/org_aomedia_aom/: metadata.json
modules/org_aomedia_avif/: metadata.json
modules/org_videolan_dav1d/: metadata.json
modules/protobuf/: metadata.json
modules/pybind11_bazel/: metadata.json
modules/re2/: metadata.json
modules/riegeli/: metadata.json
modules/rules_cc/: metadata.json
modules/rules_license/: metadata.json
modules/rules_nasm/: metadata.json
modules/rules_pkg/: metadata.json
modules/rules_proto/: metadata.json
modules/rules_python/: metadata.json
modules/rules_shell/: metadata.json
modules/snappy/: metadata.json
modules/storagetestbench/: metadata.json
modules/storagetestbench/bc7738b9f0c737c198d67e03a12d21600c3e771b/: MODULE.bazel  source.json
modules/tinyxml2/: metadata.json
modules/toolchains_llvm/: metadata.json
modules/xds/: metadata.json
modules/xz/: metadata.json
modules/zlib/: metadata.json
modules/zstd/: metadata.json
tests/aws_c_auth/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/aws_c_cal/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/aws_c_common/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/aws_c_compression/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/aws_c_event_stream/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/aws_c_http/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/aws_c_io/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/aws_c_mqtt/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/aws_c_s3/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/aws_c_sdkutils/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/aws_checksums/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/aws_s2n_tls/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/blake3/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/bzip2/: BUILD.bazel  MODULE.bazel  WORKSPACE  bazel-bin  bazel-bzip2  bazel-out  bazel-testlogs  test.txt
tests/c-ares/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/c-blosc/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/curl/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/half/: BUILD.bazel  MODULE.bazel  WORKSPACE  bazel-bin  bazel-half  bazel-out  bazel-testlogs  test.txt
tests/libjpeg_turbo/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/libpng/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/libtiff/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/libwebp/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/libyuv/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/lz4/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/nghttp2/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/org_aomedia_aom/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/org_aomedia_avif/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/org_videolan_dav1d/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/pybind11_bazel/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/re2/: BUILD.bazel  MODULE.bazel  WORKSPACE  bazel-bin  bazel-out  bazel-re2  bazel-testlogs  test.txt
tests/snappy/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/storagetestbench/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/tinyxml2/: BUILD.bazel  MODULE.bazel  WORKSPACE  bazel-bin  bazel-out  bazel-testlogs  bazel-tinyxml2  test.txt
tests/xz/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/zlib/: BUILD.bazel  MODULE.bazel  WORKSPACE
tests/zstd/: BUILD.bazel  MODULE.bazel  WORKSPACE
(+227 files in other folders)
