
module(
    name = "aws_c_common_test",
    version = "0.0.0",
    compatibility_level = 1,
    bazel_compatibility = [">=7.2.1"],
)
bazel_dep(name = "aws_c_common", version = "0.12.2")
single_version_override(module_name = "aws_c_common", version = "0.12.2")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
single_version_override(module_name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "protobuf", version = "30.2")
single_version_override(module_name = "protobuf", version = "30.2")
