
module(
    name = "aws_c_io_test",
    version = "0.0.0",
    compatibility_level = 1,
    bazel_compatibility = [">=7.2.1"],
)
bazel_dep(name = "aws_c_cal", version = "0.9.0")
single_version_override(module_name = "aws_c_cal", version = "0.9.0")
bazel_dep(name = "aws_c_common", version = "0.12.2")
single_version_override(module_name = "aws_c_common", version = "0.12.2")
bazel_dep(name = "aws_c_io", version = "0.18.1")
single_version_override(module_name = "aws_c_io", version = "0.18.1")
bazel_dep(name = "aws_s2n_tls", version = "1.5.17")
single_version_override(module_name = "aws_s2n_tls", version = "1.5.17")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
single_version_override(module_name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "boringssl", version = "0.20250415.0")
single_version_override(module_name = "boringssl", version = "0.20250415.0")
bazel_dep(name = "platforms", version = "0.0.10")
single_version_override(module_name = "platforms", version = "0.0.10")
bazel_dep(name = "protobuf", version = "30.2")
single_version_override(module_name = "protobuf", version = "30.2")
bazel_dep(name = "rules_cc", version = "0.1.1")
single_version_override(module_name = "rules_cc", version = "0.1.1")
