
module(
    name = "c-blosc_test",
    version = "0.0.0",
    compatibility_level = 1,
    bazel_compatibility = [">=7.2.1"],
)
bazel_dep(name = "bazel_skylib", version = "1.7.1")
single_version_override(module_name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "c-blosc", version = "1.21.6")
single_version_override(module_name = "c-blosc", version = "1.21.6")
bazel_dep(name = "lz4", version = "1.10.0")
single_version_override(module_name = "lz4", version = "1.10.0")
bazel_dep(name = "platforms", version = "0.0.10")
single_version_override(module_name = "platforms", version = "0.0.10")
bazel_dep(name = "protobuf", version = "30.2")
single_version_override(module_name = "protobuf", version = "30.2")
bazel_dep(name = "rules_cc", version = "0.1.1")
single_version_override(module_name = "rules_cc", version = "0.1.1")
bazel_dep(name = "snappy", version = "1.2.2")
single_version_override(module_name = "snappy", version = "1.2.2")
bazel_dep(name = "zlib", version = "1.3.0.1-20240223")
single_version_override(module_name = "zlib", version = "1.3.0.1-20240223")
bazel_dep(name = "zstd", version = "1.5.7")
single_version_override(module_name = "zstd", version = "1.5.7")
