
module(
    name = "libtiff_test",
    version = "0.0.0",
    compatibility_level = 1,
    bazel_compatibility = [">=7.2.1"],
)
bazel_dep(name = "bazel_skylib", version = "1.7.1")
single_version_override(module_name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "libjpeg_turbo", version = "2.1.5.1")
single_version_override(module_name = "libjpeg_turbo", version = "2.1.5.1")
bazel_dep(name = "libtiff", version = "4.7.0")
single_version_override(module_name = "libtiff", version = "4.7.0")
bazel_dep(name = "platforms", version = "0.0.10")
single_version_override(module_name = "platforms", version = "0.0.10")
bazel_dep(name = "protobuf", version = "30.2")
single_version_override(module_name = "protobuf", version = "30.2")
bazel_dep(name = "rules_cc", version = "0.1.1")
single_version_override(module_name = "rules_cc", version = "0.1.1")
bazel_dep(name = "xz", version = "5.8.1")
single_version_override(module_name = "xz", version = "5.8.1")
bazel_dep(name = "zlib", version = "1.3.1.1-20250425")
single_version_override(module_name = "zlib", version = "1.3.1.1-20250425")
bazel_dep(name = "zstd", version = "1.5.7")
single_version_override(module_name = "zstd", version = "1.5.7")
