
module(
    name = "org_aomedia_aom_test",
    version = "0.0.0",
    compatibility_level = 1,
    bazel_compatibility = [">=7.2.1"],
)
bazel_dep(name = "bazel_skylib", version = "1.7.1")
single_version_override(module_name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "org_aomedia_aom", version = "3.5.0-20221031-d730cef")
single_version_override(module_name = "org_aomedia_aom", version = "3.5.0-20221031-d730cef")
bazel_dep(name = "protobuf", version = "30.2")
single_version_override(module_name = "protobuf", version = "30.2")
