
module(
    name = "org_aomedia_avif_test",
    version = "0.0.0",
    compatibility_level = 1,
    bazel_compatibility = [">=7.2.1"],
)
bazel_dep(name = "bazel_skylib", version = "1.7.1")
single_version_override(module_name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "libyuv", version = "0.0.0-20240924-61bf0b6")
single_version_override(module_name = "libyuv", version = "0.0.0-20240924-61bf0b6")
bazel_dep(name = "org_aomedia_aom", version = "3.5.0-20221031-d730cef")
single_version_override(module_name = "org_aomedia_aom", version = "3.5.0-20221031-d730cef")
bazel_dep(name = "org_aomedia_avif", version = "1.2.1")
single_version_override(module_name = "org_aomedia_avif", version = "1.2.1")
bazel_dep(name = "org_videolan_dav1d", version = "1.5.1")
single_version_override(module_name = "org_videolan_dav1d", version = "1.5.1")
bazel_dep(name = "protobuf", version = "30.2")
single_version_override(module_name = "protobuf", version = "30.2")
bazel_dep(name = "rules_cc", version = "0.1.1")
single_version_override(module_name = "rules_cc", version = "0.1.1")
