
module(
    name = "re2_test",
    version = "0.0.0",
    compatibility_level = 1,
    bazel_compatibility = [">=7.2.1"],
)
bazel_dep(name = "abseil-cpp", version = "20250429-5f3435aba")
single_version_override(module_name = "abseil-cpp", version = "20250429-5f3435aba")
bazel_dep(name = "apple_support", version = "1.17.1")
single_version_override(module_name = "apple_support", version = "1.17.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
single_version_override(module_name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "google_benchmark", version = "1.9.2")
single_version_override(module_name = "google_benchmark", version = "1.9.2")
bazel_dep(name = "googletest", version = "1.15.2-20240829-0953a17")
single_version_override(module_name = "googletest", version = "1.15.2-20240829-0953a17")
bazel_dep(name = "platforms", version = "0.0.10")
single_version_override(module_name = "platforms", version = "0.0.10")
bazel_dep(name = "protobuf", version = "30.2")
single_version_override(module_name = "protobuf", version = "30.2")
bazel_dep(name = "pybind11_bazel", version = "2.13.6")
single_version_override(module_name = "pybind11_bazel", version = "2.13.6")
bazel_dep(name = "re2", version = "2024-07-02")
single_version_override(module_name = "re2", version = "2024-07-02")
bazel_dep(name = "rules_cc", version = "0.1.1")
single_version_override(module_name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_python", version = "1.4.1")
single_version_override(module_name = "rules_python", version = "1.4.1")
