
module(
    name = "snappy_test",
    version = "0.0.0",
    compatibility_level = 1,
    bazel_compatibility = [">=7.2.1"],
)
bazel_dep(name = "bazel_skylib", version = "1.7.1")
single_version_override(module_name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "google_benchmark", version = "1.9.2")
single_version_override(module_name = "google_benchmark", version = "1.9.2")
bazel_dep(name = "googletest", version = "1.15.2-20240829-0953a17")
single_version_override(module_name = "googletest", version = "1.15.2-20240829-0953a17")
bazel_dep(name = "platforms", version = "0.0.10")
single_version_override(module_name = "platforms", version = "0.0.10")
bazel_dep(name = "protobuf", version = "30.2")
single_version_override(module_name = "protobuf", version = "30.2")
bazel_dep(name = "snappy", version = "1.2.2")
single_version_override(module_name = "snappy", version = "1.2.2")
