
module(
    name = "storagetestbench",
    version = "bc7738b9f0c737c198d67e03a12d21600c3e771b",
    compatibility_level = 1,
    bazel_compatibility = [">=7.2.1"],
)
# bazel_dep(name = "pypa_crc32c")
# bazel_dep(name = "pypa_flask")
# bazel_dep(name = "pypa_googleapis_common_protos")
# bazel_dep(name = "pypa_grpcio")
# bazel_dep(name = "pypa_protobuf")
# bazel_dep(name = "pypa_requests_toolbelt")
# bazel_dep(name = "pypa_scalpl")
# bazel_dep(name = "pypa_werkzeug")
bazel_dep(name = "rules_python", version = "1.4.1")

